# live-server-lsp

./: Cargo.toml  README.md  dashboard.html
.github/workflows/: build.yml
src/: dashboard.rs  lsp.rs  main.rs
