[package]
name = "live-server-lsp"
version = "0.2.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features=["json"] }
rocket-include-static-resources = "0.10.5"
ws = { package = "rocket_ws", version = "0.1.0" }
tokio = "1.39"
serde = { version = "1.0.209", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }
url = "2.5.2"
tower-lsp = "0.20.0"
serde_json = "1.0.127"
rusty-live-server = { git = "https://github.com/frederik-uni/rusty-live-server", default-features = false }
async-trait = "0.1.81"
webbrowser = "1.0.1"
